Added link to repository

--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "description": "Command-line option parser",
     "keywords": ["option", "parser", "command-line", "cli", "terminal"],
     "version": "1.0.3",
+    "repository": {
+         "type": "git",
+         "url": "git://github.com/jfd/optparse-js.git"
+     },
     "main": "./lib/optparse"
 }
